--- a/index.html
+++ b/index.html
@@ -9,43 +9,59 @@
 <script>
 window.onload = function() {
 var game = doOne(hiragana);
-var score = 0;
-var time = 0;
-var timerEl = document.getElementById('timer');
-var scorePlugin = game.plugin('Score', function(flag) {
-	var scoreEl = document.getElementById('score');
-	scoreEl.style.display = flag? 'inline-block' : 'none';
+
+function standardPlugin(name) {
+	var wrapper = document.createElement('div');
+	var label = document.createElement('span');
+	var data = document.createElement('span');
+	label.innerHTML = name + ': ';
+	data.innerHTML = '0';
+	wrapper.appendChild(label);
+	wrapper.appendChild(data);
+	wrapper.className = 'awesome plugin';
+	wrapper.style.display = 'none';
+	wrapper.style.display = 'none';
+	document.getElementById('status').appendChild(wrapper);
+
+	var plugin = game.plugin(name, function(flag) {
+		wrapper.style.display = flag? 'block' : 'none';
+	});
+	console.log(plugin);
+	plugin.updateValue = function(value) {
+		data.innerHTML = value;
+	};
+	plugin.retrieveValue = function() {
+		return parseInt(data.innerHTML);
+	};
+	plugin.incrementValue = function() {
+		var newValue = this.retrieveValue() + 1;
+		this.updateValue(newValue);
+	};
+	return plugin;
+}
+var scorePlugin = standardPlugin('Correct');
+game.addCorrectCallback(function() {
+	scorePlugin.incrementValue();
 });
-scorePlugin.addCorrectCallback(function() {
-	score+=1;
-	document.getElementById('score').innerHTML = score;
+var incorrectScorePlugin = standardPlugin('Incorrect');
+game.addIncorrectCallback(function() {
+	incorrectScorePlugin.incrementValue();
 });
 
+var timerPlugin = standardPlugin('Timer');
+game.addTimerCallback(function() {
+	timerPlugin.incrementValue();
+});
 var romanjiPlugin = game.plugin('Romanji', function(flag) {
 	var hints = document.getElementsByClassName('hint');
 	for (var i=0; i<hints.length; i++) {
 		hints[i].style.display = (flag? 'block' : 'none');
 	}
 });
-
-var timerPlugin = game.plugin('Timer', function(flag) {
-	timerEl.innerHTML = '';
-	timerEl.style.display = flag? 'inline-block' : 'none';
-});
-
-timerPlugin.addTimerCallback(function() {
-	var time = parseInt(timerEl.innerHTML) || 0;
-	timerEl.innerHTML = time + 1;
-});
 }
 </script>
-<div id="status">
-	<div id="question"></div>
-	<span id="timer"></span>
-	<span id="score">0</div>
-</div>
+<div id="status"><div id="question" class="awesome"></div></div>
 <div id="choices"></div>
-<div id="config">
-</div>
+<div id="config"></div>
 </body>
 </html>
