limit to 5 choices

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <script>
 window.onload = function() {
-doPlugins(doOne(greek));
+doPlugins(doOne(hiragana));
 }
 </script>
 <div id="status"><div id="question" class="awesome"></div></div>
