Only show Hiragana which have been a question

--- a/hiragana.html
+++ b/hiragana.html
@@ -3,9 +3,11 @@
 <head>
 	<title>Hiragana</title>
 	<link rel="stylesheet" href="hiragana.css"></link>
+	<link rel="stylesheet" href="multipleChoice.css"></link>
 	<script type="text/javascript" src="grid.js"></script>
 	<script type="text/javascript" src="hiragana.js"></script>
 	<script type="text/javascript" src="hiragana-grid.js"></script>
+	<script type="text/javascript" src="multipleChoice.js"></script>
 </head>
 <body>
 <div id="status"><div id="question" class="awesome"></div></div>
