--- a/hiragana.html
+++ b/hiragana.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html manifest="hiragana.appcache">
 <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+	<meta name = "viewport" content = "width=device-width, initial-scale = 1.0">
 	<title>Hiragana</title>
-	<link rel="stylesheet" href="hiragana.css"></link>
 	<link rel="stylesheet" href="multipleChoice.css"></link>
+	<link rel="stylesheet" href="hiragana.css"></link>
+	<link media="only screen and (max-device-width: 480px)" href="small-device.css" type= "text/css" rel="stylesheet">
 	<script type="text/javascript" src="grid.js"></script>
 	<script type="text/javascript" src="hiragana.js"></script>
 	<script type="text/javascript" src="hiragana-grid.js"></script>
