--- a/vowels.html
+++ b/vowels.html
@@ -13,18 +13,13 @@
 	<script type="text/javascript" src="hiragana.js"></script>
 	<script type="text/javascript" src="multipleChoice.js"></script>
 	<script type="text/javascript" src="common-game.js"></script>
-	<script type="text/javascript" src="hiragana-grid.js"></script>
+	<script type="text/javascript" src="vowels.js"></script>
 </head>
-<body>
+<body onload='createGame(vowelGame)'>
 <div id="status"><div id="question" class="awesome"></div></div>
 <div id="config"></div>
 <div id="choices"></div>
 <br style="clear:both"/>
 <div id="grid"></div>
-<script>
-document.addEventListener('DOMContentLoaded', function() {
-createGame(gridGame);
-}, false);
-</script>
 </body>
 </html>
