--- a/limited-grid.html
+++ b/limited-grid.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="hiragana-grid.js"></script>
 </head>
 <body>
-<div id="status"><div id="question" class="awesome"></div></div>
+<div id="status"></div>
 <div id="config"></div>
 <div id="choices"></div>
 <br style="clear:both"/>
