--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	<link rel="stylesheet" href="multipleChoice.css"></link>
 	<link rel="stylesheet" href="hiragana.css"></link>
 	<link media="only screen and (max-device-width: 480px)" href="small-device.css" type= "text/css" rel="stylesheet">
+	<script type="text/javascript" src="browser-upgrade.js"></script>
 	<script type="text/javascript" src="grid.js"></script>
 	<script type="text/javascript" src="hiragana.js"></script>
 	<script type="text/javascript" src="multipleChoice.js"></script>
-	<script type="text/javascript" src="common-game.js"></script>
 	<script type="text/javascript" src="hiragana-grid.js"></script>
+	<script type="text/javascript" src="common-game.js"></script>
 </head>
 <body>
 <div id="status"></div>
