Toggle between grid / multichoice depending on whether the previous answer was correct

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 	<script type="text/javascript" src="sound.js"></script>
 </head>
 <body>
-<div id="status"></div>
+<div id="status">
+	<div id="questions"></div>
+</div>
 <div id="config"></div>
 <div id="grid"></div>
 <br style="clear:both"/>
