Work off the levels object, do away with the other config object. Get swapping betweek question modes correctly.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
 <div id="status">
 	<div id="questions"></div>
+	<div id="incorrectAnswers"></div>
 </div>
 <div id="config"></div>
 <div id="grid"></div>
